按鈕大小微調

--- a/css/rwd.css
+++ b/css/rwd.css
@@ -9,6 +9,10 @@
     .guid-tour-bar-center{
         max-width: 1200px;
     }
+    /* copyright */
+    .copyright-text{
+        max-width: 1200px;
+    }
 }
 
 @media screen and (max-width:1200px) {
@@ -21,6 +25,10 @@
     }
     /* 麵包屑 */
     .guid-tour-bar-center{
+        margin: 0 3vw;
+    }
+    /* copyright */
+    .copyright-text{
         margin: 0 3vw;
     }
 }
@@ -81,11 +89,11 @@
         height: 24px;
     }
     .header-wrapper nav ul li{
-        margin-left: 20px;
+        margin-left: 30px;
     }
-    nav ul li i {
+    /* nav ul li i {
         font-size: 1rem;
-    }
+    } */
 
     /* 首頁 bn */
     .swiper-wrapper{
