店家公告、當月首推rwd

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ a{
 
 *{
     font-family: Arial, 'Times New Roman', 'Noto Sans TC';
+    letter-spacing: 1px;
 }
 
 /* ----- header ---- */
@@ -265,6 +266,7 @@ footer{
     color: #0C2557;
     overflow: hidden;
     font-size: 14px;
+    padding: 1rem 0;
 }
 .copyright-text{
     max-width: 1320px;
@@ -277,9 +279,9 @@ footer{
     font-size: 0;
 }
 .social-account a{
-    width: 24px;
+    width: 30px;
     display: inline-block;
-    padding-right: 8px;
+    padding-right: 10px;
 }
 .social-account a img{
     width: 100%;
@@ -340,7 +342,6 @@ main {
 
 /* 店家公告 */
 .post{
-    /* width: 80vw; */
     max-width: 960px;
     margin: 0 auto;
 }
@@ -399,6 +400,8 @@ main {
 .recommend-product{
     flex-grow: 1;
     padding-left: 32px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 .product-top{
     display: flex;
@@ -433,6 +436,7 @@ main {
     box-sizing: border-box;
     text-align: center;
     color: #D6C4A5;
+    margin-bottom: 10px;
 }
 .product-bottom-img{
     position: relative;
