--- a/css/rwd.css
+++ b/css/rwd.css
@@ -27,6 +27,13 @@
     .guid-tour-bar-center{
         margin: 0 3vw;
     }
+    /* 首頁-當月首推 */
+    .recommend{
+        padding-right: 3vw;
+    }
+    .recommend-product{
+        padding-left: 3vw;
+    }
     /* copyright */
     .copyright-text{
         margin: 0 3vw;
@@ -41,9 +48,35 @@
     .header-wrapper nav.nav-small{
         display: inline-block;
     }
+    /* 店家公告 */
+    .post{
+        max-width: 720px;
+    }
+    .post ul li a{
+        width: 200px;
+    }
 }
 
+@media screen and (max-width:1024px) {
+    /* 首頁 bn */
+    .swiper-wrapper{
+        height: 40vh;
+    }
+    /* 首頁-當月首推 */
+    .product-bottom{
+        column-gap: 20px;
+    }
+    .product-bottom li{
+        width: calc((100% - 40px) / 3);
+    }
+}
 
+@media screen and (max-width:912px) {
+    /* 首頁-當月首推 */
+    .product-bottom>li>a{
+        line-height: 1.6;
+    }
+}
 
 @media screen and (max-width:820px) {
 
@@ -54,11 +87,6 @@
     .header-wrapper{
         padding: 10px 0;
     }
-    /* 首頁 bn */
-    .swiper-wrapper{
-        height: 40vh;
-    }
-
 
 
 
@@ -70,8 +98,33 @@
     .swiper-button-next:after, .swiper-button-prev:after{
         font-size: 30px;
     }
+
+    /* 首頁-當月首推 */
+    .recommend-image img{
+        width: 36vw;
+    }
+    .product-bottom{
+        column-gap: 15px;
+    }
+    .product-bottom li{
+        width: calc((100% - 30px) / 3);
+    }
     
 
+}
+
+@media screen and (max-width:768px) {
+    /* 店家公告 */
+    .post{
+        max-width: 90vw;
+        overflow: hidden;
+    }
+    .post ul{
+        gap: 20px;
+    }
+    .post ul li a{
+        width: 320px;
+    }
 }
 
 
@@ -91,9 +144,6 @@
     .header-wrapper nav ul li{
         margin-left: 30px;
     }
-    /* nav ul li i {
-        font-size: 1rem;
-    } */
 
     /* 首頁 bn */
     .swiper-wrapper{
@@ -110,6 +160,27 @@
     /* 麵包屑 */
     .guid-tour-bar{
         height: 30px;
+    }
+    /* 店家公告 */
+    .post h1{
+        font-size: 32px;
+    }
+
+
+
+
+
+
+    /* copyright */
+    .copyright-text{
+        flex-direction: column-reverse;
+        gap: 20px;
+
+    }
+    .copyright-text-left{
+        width: 100%;
+        white-space: nowrap;
+        overflow: hidden;
     }
 
 }
