--- a/css/rwd.css
+++ b/css/rwd.css
@@ -1,169 +1,221 @@
 @import url(./reset.css);
 
 @media screen and (max-width:1350px) {
+
     /* header */
-    .header-wrapper{
+    .header-wrapper {
         max-width: 1200px;
     }
+
     /* 麵包屑 */
-    .guid-tour-bar-center{
+    .guid-tour-bar-center {
         max-width: 1200px;
     }
+
     /* copyright */
-    .copyright-text{
+    .copyright-text {
         max-width: 1200px;
     }
 }
 
 @media screen and (max-width:1200px) {
+
     /* header */
-    .header-wrapper .logo{
+    .header-wrapper .logo {
         margin-left: 3vw;
     }
-    .header-wrapper nav{
+
+    .header-wrapper nav {
         margin-right: 3vw;
     }
+
     /* 麵包屑 */
-    .guid-tour-bar-center{
+    .guid-tour-bar-center {
         margin: 0 3vw;
     }
+
     /* 首頁-當月首推 */
-    .recommend{
+    .recommend {
         padding-right: 3vw;
     }
-    .recommend-product{
+
+    .recommend-product {
         padding-left: 3vw;
     }
+
     /* copyright */
-    .copyright-text{
+    .copyright-text {
         margin: 0 3vw;
     }
 }
 
 @media screen and (max-width:1100px) {
+
     /* header */
     .header-wrapper .nav-large {
         display: none;
     }
-    .header-wrapper nav.nav-small{
+
+    .header-wrapper nav.nav-small {
         display: inline-block;
     }
+
     /* 店家公告 */
-    .post{
+    .post {
         max-width: 720px;
     }
-    .post ul li a{
+
+    .post ul li a {
         width: 200px;
     }
 
     /* 精選類別 */
-    .index-feature ul{
+    .index-feature ul {
         max-width: 720px;
     }
-    .index-feature ul li{
+
+    .index-feature ul li {
         width: 225px;
     }
 }
 
 @media screen and (max-width:1024px) {
+
     /* 首頁 bn */
-    .swiper-wrapper{
+    .swiper-wrapper {
         height: 40vh;
     }
+
     /* 首頁-當月首推 */
-    .product-bottom{
+    .product-bottom {
         column-gap: 20px;
     }
-    .product-bottom li{
+
+    .product-bottom li {
         width: calc((100% - 40px) / 3);
     }
 }
 
 @media screen and (max-width:912px) {
+
     /* 首頁-當月首推 */
-    .product-bottom>li>a{
+    .product-bottom>li>a {
         line-height: 1.6;
+    }
+
+    /* copyright */
+    .copyright-text {
+        flex-direction: column-reverse;
+        gap: 20px;
+        text-align: center;
+    }
+
+    .copyright-text-left {
+        width: 100%;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+
+    .copyright-text-left p:nth-of-type(1) {
+        text-indent: 1rem;
     }
 }
 
 @media screen and (max-width:820px) {
 
     /* header */
-    .header-wrapper .logo{
+    .header-wrapper .logo {
         flex: 0 1 260px;
     }
-    .header-wrapper{
+
+    .header-wrapper {
         padding: 10px 0;
     }
 
 
 
     /* 會員專區 */
-    .member-level-introduction-center{
+    .member-level-introduction-center {
         column-gap: 50px;
         justify-content: center;
     }
-    .swiper-button-next:after, .swiper-button-prev:after{
+
+    .swiper-button-next:after,
+    .swiper-button-prev:after {
         font-size: 30px;
     }
 
     /* 首頁-當月首推 */
-    .recommend-image img{
+    .recommend-image img {
         width: 36vw;
     }
-    .product-bottom{
+
+    .product-bottom {
         column-gap: 15px;
     }
-    .product-bottom li{
+
+    .product-bottom li {
         width: calc((100% - 30px) / 3);
     }
-    
+
 
 }
 
 @media screen and (max-width:768px) {
+
     /* 店家公告 */
-    .post{
+    .post {
         max-width: 90vw;
         overflow: hidden;
     }
-    .post ul{
+
+    .post ul {
         gap: 20px;
     }
-    .post ul li a{
+
+    .post ul li a {
         width: 320px;
     }
+
     /* 首頁-當月首推 */
-    .recommend{
+    .recommend {
         padding-right: 0;
     }
-    .recommend-product{
+
+    .recommend-product {
         padding-right: 3vw;
         padding-top: 0;
         padding-bottom: 0;
     }
-    .recommend-image{
+
+    .recommend-image {
         display: none;
     }
-    .product-top{
+
+    .product-top {
         justify-content: center;
     }
-    .product-top-large{
+
+    .product-top-large {
         display: none;
     }
-    .product-top-small{
+
+    .product-top-small {
         display: block;
     }
+
     /* 精選專區 */
-    .index-feature ul{
+    .index-feature ul {
         gap: 20px;
         justify-content: flex-start;
         overflow: hidden;
     }
-    .index-feature ul li{
+
+    .index-feature ul li {
         width: 400px;
     }
-    .index-feature ul li a:nth-child(1){
+
+    .index-feature ul li a:nth-child(1) {
         width: 400px;
     }
 }
@@ -172,46 +224,54 @@
 @media screen and (max-width:430px) {
 
     /* header */
-    .header-wrapper{
+    .header-wrapper {
         flex-wrap: nowrap;
         padding: 8px 0;
     }
-    .header-wrapper .logo{
+
+    .header-wrapper .logo {
         flex: 0 1 170px;
     }
-    .header-wrapper input{
+
+    .header-wrapper input {
         height: 24px;
     }
-    .header-wrapper nav ul li{
+
+    .header-wrapper nav ul li {
         margin-left: 30px;
     }
 
     /* 首頁 bn */
-    .swiper-wrapper{
+    .swiper-wrapper {
         height: 28vh;
     }
-    .swiper-button-next:after, .swiper-button-prev:after{
+
+    .swiper-button-next:after,
+    .swiper-button-prev:after {
         font-size: 24px;
     }
-    .swiper-pagination-bullet{
+
+    .swiper-pagination-bullet {
         width: 6px;
         height: 6px;
     }
 
     /* 麵包屑 */
-    .guid-tour-bar{
+    .guid-tour-bar {
         height: 30px;
     }
+
     /* 店家公告 */
-    .post h1{
+    .post h1 {
         font-size: 32px;
     }
 
     /* 首頁-當月首推 */
-    .product-bottom{
+    .product-bottom {
         justify-content: space-between;
     }
-    .product-bottom li{
+
+    .product-bottom li {
         width: calc((100% - 20px) / 2);
     }
 
@@ -221,7 +281,7 @@
 
 
     /* copyright */
-    .copyright-text{
+    /* .copyright-text{
         flex-direction: column-reverse;
         gap: 20px;
 
@@ -230,6 +290,6 @@
         width: 100%;
         white-space: nowrap;
         overflow: hidden;
-    }
+    } */
 
 }
