--- a/css/rwd.css
+++ b/css/rwd.css
@@ -24,7 +24,6 @@
     .header-wrapper .logo {
         margin-left: 3vw;
     }
-
     .header-wrapper nav {
         margin-right: 3vw;
     }
@@ -38,7 +37,6 @@
     .recommend {
         padding-right: 3vw;
     }
-
     .recommend-product {
         padding-left: 3vw;
     }
@@ -55,7 +53,6 @@
     .header-wrapper .nav-large {
         display: none;
     }
-
     .header-wrapper nav.nav-small {
         display: inline-block;
     }
@@ -64,7 +61,6 @@
     .post {
         max-width: 720px;
     }
-
     .post ul li a {
         width: 200px;
     }
@@ -73,7 +69,6 @@
     .index-feature ul {
         max-width: 720px;
     }
-
     .index-feature ul li {
         width: 225px;
     }
@@ -90,7 +85,6 @@
     .product-bottom {
         column-gap: 20px;
     }
-
     .product-bottom li {
         width: calc((100% - 40px) / 3);
     }
@@ -103,19 +97,25 @@
         line-height: 1.6;
     }
 
+    /* footer */
+    .footer-text{
+        flex-direction: column;
+    }
+    .footer-info table:nth-of-type(1){
+        width: 50%;
+    }
+    
     /* copyright */
     .copyright-text {
         flex-direction: column-reverse;
         gap: 20px;
         text-align: center;
     }
-
     .copyright-text-left {
         width: 100%;
         white-space: nowrap;
         overflow: hidden;
     }
-
     .copyright-text-left p:nth-of-type(1) {
         text-indent: 1rem;
     }
@@ -127,7 +127,6 @@
     .header-wrapper .logo {
         flex: 0 1 260px;
     }
-
     .header-wrapper {
         padding: 10px 0;
     }
@@ -139,7 +138,6 @@
         column-gap: 50px;
         justify-content: center;
     }
-
     .swiper-button-next:after,
     .swiper-button-prev:after {
         font-size: 30px;
@@ -149,11 +147,9 @@
     .recommend-image img {
         width: 36vw;
     }
-
     .product-bottom {
         column-gap: 15px;
     }
-
     .product-bottom li {
         width: calc((100% - 30px) / 3);
     }
@@ -168,7 +164,6 @@
         max-width: 90vw;
         overflow: hidden;
     }
-
     .post ul {
         gap: 20px;
     }
@@ -176,7 +171,6 @@
         flex: 0 0 80%;
     }
     .post ul li a {
-        /* width: 320px; */
         width: 100%;
     }
 
@@ -184,25 +178,20 @@
     .recommend {
         padding-right: 0;
     }
-
     .recommend-product {
         padding-right: 3vw;
         padding-top: 0;
         padding-bottom: 0;
     }
-
     .recommend-image {
         display: none;
     }
-
     .product-top {
         justify-content: center;
     }
-
     .product-top-large {
         display: none;
     }
-
     .product-top-small {
         display: block;
     }
@@ -213,15 +202,22 @@
         gap: 20px;
         justify-content: flex-start;
         overflow: hidden;
-
     }
-
     .index-feature ul li {
         flex: 0 0 80%;
     }
 
     .index-feature ul li a:nth-child(1) {
         width: 100%;
+    }
+
+
+    /* footer */
+    .footer-text{
+        width: 80vw;
+    }
+    .footer-info table td{
+        font-size: 0.8rem;
     }
 }
 
@@ -233,15 +229,12 @@
         flex-wrap: nowrap;
         padding: 8px 0;
     }
-
     .header-wrapper .logo {
         flex: 0 1 170px;
     }
-
     .header-wrapper input {
         height: 24px;
     }
-
     .header-wrapper nav ul li {
         margin-left: 30px;
     }
@@ -250,12 +243,10 @@
     .swiper-wrapper {
         height: 28vh;
     }
-
     .swiper-button-next:after,
     .swiper-button-prev:after {
         font-size: 24px;
     }
-
     .swiper-pagination-bullet {
         width: 6px;
         height: 6px;
@@ -275,26 +266,8 @@
     .product-bottom {
         justify-content: space-between;
     }
-
     .product-bottom li {
         width: calc((100% - 20px) / 2);
     }
-
-
-
-
-
-
-    /* copyright */
-    /* .copyright-text{
-        flex-direction: column-reverse;
-        gap: 20px;
-
-    }
-    .copyright-text-left{
-        width: 100%;
-        white-space: nowrap;
-        overflow: hidden;
-    } */
 
 }
