--- a/css/style.css
+++ b/css/style.css
@@ -620,6 +620,7 @@ main {
     font-size: 36px;
     font-weight: bold;
     line-height: 60px;
+    margin-bottom: 20px;
 }
 .form-box form>div{
     border-bottom: 1px solid #999;
@@ -728,7 +729,8 @@ main {
 }
 
 .another{
-    margin-bottom: 40px;
+    margin-top: 24px;
+    margin-bottom: 72px;
 }
 .another p{
     text-align: center;
