--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,12 @@ main {
 :root {
     --swiper-theme-color: #D6C4A5;
 }
+.swiper-button-prev:hover,.swiper-button-next:hover{
+    color: #9E8966;
+}
+.swiper-pagination-bullet-active{
+    background-color: #9E8966;
+}
 
 /* 滑鼠移到上方時停止輪播 */
 /* .index-banner:hover{
@@ -360,6 +366,9 @@ main {
 .post ul{
     display: flex;
     justify-content: space-between;
+    position: relative;
+    left: 0;
+    transition: all ease;
 }
 .post ul li a{
     display: block;
@@ -507,6 +516,8 @@ main {
 
 /* 精選類別 */
 .index-feature{
+    max-width: 960px;
+    margin: 0 auto;
     padding-bottom: 50px;
 }
 .index-feature h1{
@@ -516,11 +527,13 @@ main {
     text-align: center;
 }
 .index-feature ul{
-    max-width: 960px;
-    margin: 0 auto;
+    /* max-width: 960px;
+    margin: 0 auto; */
     padding-top: 30px;
     display: flex;
     justify-content: space-between;
+    position: relative;
+    left: 0;
 }
 
 .index-feature ul li{
@@ -655,6 +668,7 @@ main {
     box-sizing: border-box;
     background-color: #0C2557;
     color: #fff;
+    font-size: 0.875rem;
 }
 .form-box form input::placeholder{
     color: #9E8966;
