owl 輪播套用測試

--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,13 @@ main {
     color: #1863DD;
 }
 
+.owl-nav{
+    display: none;
+}
+.owl-dots{
+    display: none;
+}
+
 /* 當月推薦 */
 .recommend{
     display: flex;
