字體大小調整測試

--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ footer{
     background-color: #F9F7F3;
     color: #0C2557;
     overflow: hidden;
-    font-size: 14px;
+    font-size: 0.875rem;
     padding: 1rem 0;
 }
 .copyright-text{
