--- a/css/style.css
+++ b/css/style.css
@@ -210,11 +210,11 @@ main{
 /* 回到最上 */
 .toTop{
     position: fixed;
-    bottom: 8vh;
+    bottom: 15vh;
     right: 3vw;
     z-index: 5;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 99rem;
     text-align: center;
     border: 2px solid #F4E9D5;
@@ -224,7 +224,7 @@ main{
     transition: all .3s ease-in;
 }
 .toTop i{
-    line-height: 50px;
+    line-height: 40px;
     font-size: 40px;
     color: #F4E9D5;
 }
@@ -1187,6 +1187,7 @@ input#get-new, input#privacy-policy{
     display: block;
     color: #D6C4A5;
     padding: 15px 0;
+    line-height: 1.6;
 }
 .product-container li>a:nth-of-type(1):hover{
     color: #9E8966;
