--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ footer{
     background-color: #F9F7F3;
     color: #0C2557;
     overflow: hidden;
-    font-size: 0.875rem;
+    font-size: 0.875rem !important;
     padding: 1rem 0;
 }
 .copyright-text{
@@ -952,11 +952,15 @@ input#get-new, input#privacy-policy{
 
 /* ---------------- contact ----------------*/
 .contact-wrapper{
-    width: 1170px;
+    max-width: 1170px;
     margin: 80px auto;
     display: flex;
     align-items: center;
     gap: 30px;
+}
+.contact-wrapper iframe{
+    width: 570px;
+    height: 464px;
 }
 .contact-table{
     width: 570px;
@@ -1045,6 +1049,7 @@ input#get-new, input#privacy-policy{
     left: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
+    white-space: nowrap;
 }
 .shop-info>p{
     padding: 70px;
@@ -1076,10 +1081,12 @@ input#get-new, input#privacy-policy{
     color: #0C2557;
     letter-spacing: 1.76px;
     line-height: 60px;
+    font-weight: 500;
 }
 .about-info p{
     margin: 40px 0;
     line-height: 30px;
+    text-align: justify;
 }
 .about-photo{
     flex-basis: 420px;
@@ -1123,6 +1130,7 @@ input#get-new, input#privacy-policy{
 .about-content::after{
     content: '嚴選頂級食材';
     font-size: 30px;
+    letter-spacing: 1.5px;
     color: #fff;
     font-weight: bold;
     display: block;
